# advent-of-code-2022

./: pyproject.toml
notebooks/: sample.ipynb
src/: p1.py  p10.py  p11.py  p12.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py  template.py  utils.py
