[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Tristan Wagner <Tristan.Wagner@nike.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.23.3"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
kaleido = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
